update_test_controller